unpackaged/main/default/objects/RFI_Categories__c/RFI_Categories__c.object-meta.xml
<CustomObject>
    <label>RFI Category</label>
    <nameField>
        <label>RFI Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFI Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>