unpackaged/main/default/objects/RFI_Categories__c/fields/Default_to_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Default_to_Blocker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default to Blocker</label>
    <type>Checkbox</type>
</CustomField>