unpackaged/main/default/objects/RFI_Categories__c/fields/Knowledge_Article_Name__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Name__c</fullName>
    <label>Knowledge Article Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>