unpackaged/main/default/objects/RFI_Categories__c/fields/Plant_Asset_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Filter_Field__c</fullName>
    <label>Plant Asset Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Connection Scope</fullName>
            </value>
            <value>
                <fullName>Customer Solution</fullName>
            </value>
            <value>
                <fullName>Add-On-Products</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>PF Service Product</fullName>
            </value>
            <value>
                <fullName>PF Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>