unpackaged/main/default/objects/RFI_Categories__c/fields/Plant_Asset_Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Filter_Value__c</fullName>
    <label>Plant Asset Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>