unpackaged/main/default/objects/RFI_Categories__c/fields/Renewable_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Type_Filter__c</fullName>
    <label>Renewable Type Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Renewable_Type</valueSetName>
    </valueSet>
</CustomField>