unpackaged/main/default/objects/RFI_Categories__c/fields/RFI_Category_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Category_Status__c</fullName>
    <label>RFI Category Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>