unpackaged/main/default/objects/RFI_Categories__c/fields/RFI_Sub_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>RFI_Sub_Type_Filter__c</fullName>
    <label>RFI Sub Type Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFI_Sub_Type</valueSetName>
    </valueSet>
</CustomField>