unpackaged/main/default/objects/RFI_Categories__c/fields/Unique_Name_For_Validation__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name_For_Validation__c</fullName>
    <formula>LOWER(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Name For Validation</label>
    <type>Text</type>
</CustomField>