unpackaged/main/default/objects/RFI_Categories__c/recordTypes/Incorrect_Information.recordType-meta.xml
<RecordType>
    <fullName>Incorrect_Information</fullName>
    <active>true</active>
    <label>Incorrect Information</label>
</RecordType>