unpackaged/main/default/objects/RFI_Categories__c/recordTypes/Missing_Incomplete_Information.recordType-meta.xml
<RecordType>
    <fullName>Missing_Incomplete_Information</fullName>
    <active>true</active>
    <label>Missing/Incomplete Information</label>
</RecordType>